--- a/css/style02.css
+++ b/css/style02.css
@@ -301,35 +301,35 @@ body {
     position: relative;
 }
 
-.main .swiper_container::after {
-    content: '';
+.mySwiper {
     width: 100%;
-    height: 100%;
-    background-color: #F3F8FF;
-    position: absolute;
-    bottom: -50%;
-    left: 0;
-    z-index: -2;
+    /* height: 28vw; */
 }
 
-.mySwiper .swiper-slide {
-    /* min-width: 836px;  */
-    width: 48%;
+.main {
+    position: relative;
+}
 
-    /* height: 395px; */
-    /* padding-bottom: 20px; */
+.swiper-slide {
+    max-width: 836px;
+    width: 100%;
+    margin: 0 auto;
+    height: 395px;
+}
+
+.mySwiper .swiper-slide > div {
+    width: 100%;
+    /* height: 100%; */
 }
 
 .mySwiper .swiper-slide div a {
     display: block;
     width: 100%;
-    height: 22vw;
 }
 
 .mySwiper .swiper-slide div figure {
     width: 100%;
-
-    height: 100%;
+    /* height: 100%; */
 
     border-radius: 20px;
     overflow: hidden;
@@ -364,9 +364,15 @@ body {
 .mySwiper .swiper-rtl .swiper-button-next {
     background: url('../img/prev-btn.png') center center / 100% no-repeat;
     box-shadow: 0 5px 20px rgba(0, 15, 68, 0.2);
-    left: 24%;
+
+    /* left: 24%;
+    top: 50%;
+    transform: translateY(-50%); */
+
+    left: calc(50% - 450px);
     top: 50%;
     transform: translateY(-50%);
+
     width: 8rem;
     height: 8rem;
 }
@@ -375,11 +381,14 @@ body {
 .mySwiper .swiper-rtl .swiper-button-prev {
     background: url('../img/next-btn.png') center center / 100% no-repeat;
     box-shadow: 0 0.5px 20px rgba(0, 15, 68, 0.2);
-    right: 24%;
-    top: 50%;
+    
     transform: translateY(-50%);
     width: 8rem;
     height: 8rem;
+
+    right: calc(50% - 450px);
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .mySwiper .swiper-button-next:after,
@@ -420,7 +429,7 @@ body {
 .section01 {
     margin-bottom: 15rem;
     position: relative;
-    padding: 15rem 0;
+    padding: 0 0 15rem 0;
 }
 
 .section01 .mobile {
@@ -1170,11 +1179,6 @@ body {
     .pc {
         display: none;
     }
-
-    /* section01 */
-    /* .section01 .left figure {
-        height: 57vw;
-    } */
 
     /* section01 */
     .section01 .left figure {
